--- a/dashboard3/index.html
+++ b/dashboard3/index.html
@@ -59,9 +59,9 @@
             <div class="card widget-flat">
               <div class="card-body">
                 <h5 class="text-muted fw-normal mt-0" title="Number of Cars">Cars</h5>
-                <h3 class="mt-3 mb-3">36,254</h3>
+                <h3 class="mt-3 mb-3 car_count">NA</h3>
                 <p class="mb-0 text-muted">
-                  <span class="text-success me-2"><i class="bx bxs-up-arrow"></i> 5.27%</span>
+                  <span class="text-success me-2 car_text"><i class="bx"></i> NA</span>
                   <span class="text-nowrap">Since last month</span>  
                 </p>
               </div>
@@ -71,9 +71,9 @@
             <div class="card widget-flat">
               <div class="card-body">
                 <h5 class="text-muted fw-normal mt-0" title="Number of People">People</h5>
-                <h3 class="mt-3 mb-3">36,254</h3>
+                <h3 class="mt-3 mb-3 person_count">NA</h3>
                 <p class="mb-0 text-muted">
-                  <span class="text-success me-2"><i class="bx bxs-up-arrow"></i> 5.27%</span>
+                  <span class="text-success me-2 person_text"><i class="bx"></i> NA</span>
                   <span class="text-nowrap">Since last month</span>  
                 </p>
               </div>
@@ -85,15 +85,16 @@
             <div class="card widget-flat">
               <div class="card-body">
                 <h5 class="text-muted fw-normal mt-0" title="Number of Bicycles">Bicycles</h5>
-                <h3 class="mt-3 mb-3">36,254</h3>
+                <h3 class="mt-3 mb-3 bicycle_count">NA</h3>
                 <p class="mb-0 text-muted">
-                  <span class="text-success me-2"><i class="bx bxs-up-arrow"></i> 5.27%</span>
+                  <span class="text-success me-2 bicycle_text"><i class="bx"></i> NA</span>
                   <span class="text-nowrap">Since last month</span>  
                 </p>
               </div>
             </div>
           </div>
           <div class="col-lg-6">
+            <!--
             <div class="card widget-flat">
               <div class="card-body">
                 <h5 class="text-muted fw-normal mt-0" title="Number of Trucks">Trucks</h5>
@@ -104,6 +105,7 @@
                 </p>
               </div>
             </div>
+            -->
           </div>
         </div>
       </div>
@@ -126,6 +128,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="./js/jquery.csv.min.js"></script>
+    <script src="./js/moment.min.js"></script>
     <script src="./js/script.js"></script>
     <script src="./js/navbar.js"></script>
     <script src="./js/charts.js"></script>
